# pantry-pal-backend

./: .gitignore  Procfile  db.sqlite3  manage.py  pyproject.toml  requirements.txt
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
pantryPalBackend/: asgi.py  env.example  settings.py  urls.py  wsgi.py
