[tool.poetry]
name = "pantrypal"
version = "0.1.0"
description = "backend for pantrypal app.\u001b[D"
authors = ["Tom Ames <tsamesdev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"
djangorestframework = "^3.14.0"
requests = "^2.31.0"
psycopg2 = "^2.9.6"
gunicorn = "^21.2.0"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
